<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login_act">

    <ImageView
        android:id="@+id/iv_login_logo"
        android:layout_centerHorizontal="true"
        android:layout_width="99dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:src="@drawable/iv_login_logo"/>

    <ImageView
        android:layout_below="@id/iv_login_logo"
        android:layout_centerHorizontal="true"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:scaleType="fitXY"
        android:src="@drawable/iv_login_title" />



    <LinearLayout
        android:id="@+id/ll_login"
        android:layout_width="256dp"
        android:layout_height="80dp"
        android:orientation="vertical"
        android:background="@drawable/bg_login_input"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/button">
        <EditText
            android:id="@+id/edt_username"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginStart="6dp"
            android:layout_marginLeft="6dp"
            android:background="@null"
            android:hint="@string/user_hint"
            android:textColorHint="#ABA3A3"
            android:textSize="@dimen/home_common_14sp"
            android:textColor="#292929"
            android:singleLine="true" />
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#000"/>
        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginStart="6dp"
            android:layout_marginLeft="6dp"
            android:background="@null"
            android:inputType="textPassword"
            android:hint="@string/pwd_hint"
            android:textColorHint="#ABA3A3"
            android:textSize="@dimen/home_common_14sp"
            android:textColor="#292929"
            android:singleLine="true" />

    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/ll_login"
        android:text="@string/login"
        android:layout_width="256dp"
        android:layout_height="40dp"
        android:layout_marginTop="19dp"
        android:background="@drawable/bg_btn_login"/>

    <LinearLayout
        android:layout_below="@id/button"
        android:layout_alignStart="@id/ll_login"
        android:layout_alignLeft="@id/ll_login"
        android:layout_marginTop="9dp"
        android:layout_width="match_parent"
        android:layout_height="16dip"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cb_reb_pwd"
            android:layout_width="16dip"
            android:layout_height="16dip"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:checked="true"
            android:background="@drawable/rebpwd_checkbox_style"
            android:button="@null"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_marginStart="9dip"
            android:layout_marginLeft="9dip"
            android:text="@string/reb_pwd"
            android:textColor="#666666"
            android:textSize="12sp" />
    </LinearLayout>

</RelativeLayout>