<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include android:id="@+id/icld_mine_top" layout="@layout/home_include_title"/>
    <RelativeLayout
        android:id="@+id/rl_gsgl"
        android:layout_below="@id/icld_mine_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/home_common_FFFFFF">

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:background="@color/home_common_9CA0A4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/work_gsgl"
            android:textColor="@color/home_common_000000"
            android:textSize="@dimen/home_common_14sp" />

        <TextView
            android:id="@+id/tv_gsgl_expand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/work_expand"
            android:textColor="@color/home_common_000000"
            android:textSize="@dimen/home_common_12sp" />

        <LinearLayout
            android:id="@+id/ll_gsgl"
            android:layout_width="match_parent"
            android:layout_height="78dp"
            android:layout_below="@id/tv_gsgl_expand"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/ll_gsjg"
                style="@style/home_ll_org_top_btn">

                <RelativeLayout
                    android:id="@+id/rl_gsjg"
                    style="@style/home_rl_org_top_btn">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY"
                        android:src="@mipmap/h_gsjg" />

                    <RelativeLayout style="@style/rlWorkMsg">

                        <TextView
                            android:id="@+id/tv_gsjg_num" style="@style/tvWorkMsg"/>
                    </RelativeLayout>

                </RelativeLayout>

                <TextView
                    android:id="@+id/tv_gsjg"
                    style="@style/home_tv_org_top_btn_name"
                    android:text="@string/work_gsjg" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_gszl"
                style="@style/home_ll_org_top_btn">

                <RelativeLayout
                    android:id="@+id/rl_gszl"
                    style="@style/home_rl_org_top_btn">

                    <ImageView
                        android:id="@+id/iv_gszl"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY"
                        android:src="@mipmap/h_gszl" />


                    <RelativeLayout
                        style="@style/rlWorkMsg">

                        <TextView
                            android:id="@+id/tv_gszl_num"
                            style="@style/tvWorkMsg"/>
                    </RelativeLayout>
                </RelativeLayout>

                <TextView
                    android:id="@+id/tv_gszl"
                    style="@style/home_tv_org_top_btn_name"
                    android:text="@string/work_gszl" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_bmzl"
                style="@style/home_ll_org_top_btn">

                <RelativeLayout
                    android:id="@+id/rl_bmzl"
                    style="@style/home_rl_org_top_btn">

                    <ImageView
                        android:id="@+id/iv_bmzl"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY"
                        android:src="@mipmap/h_bmzl" />

                    <RelativeLayout style="@style/rlWorkMsg">

                        <TextView
                            android:id="@+id/tv_bmzl_num" style="@style/tvWorkMsg"/>
                    </RelativeLayout>
                </RelativeLayout>

                <TextView
                    android:id="@+id/tv_bmzl"
                    style="@style/home_tv_org_top_btn_name"
                    android:text="@string/work_bmzl" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_zfwz"
                style="@style/home_ll_org_top_btn">

                <RelativeLayout
                    android:id="@+id/rl_zfwz"
                    style="@style/home_rl_org_top_btn">

                    <ImageView
                        android:id="@+id/iv_zfwz"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY"
                        android:src="@mipmap/h_zfwz" />

                    <RelativeLayout style="@style/rlWorkMsg">

                        <TextView
                            android:id="@+id/tv_zfwz_num" style="@style/tvWorkMsg"/>
                    </RelativeLayout>
                </RelativeLayout>

                <TextView
                    android:id="@+id/tv_zfwz"
                    style="@style/home_tv_org_top_btn_name"
                    android:text="@string/work_zfwz" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_gswz"
                style="@style/home_ll_org_top_btn">

                <RelativeLayout
                    android:id="@+id/rl_gswz"
                    style="@style/home_rl_org_top_btn">

                    <ImageView
                        android:id="@+id/iv_gswz"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY"
                        android:src="@mipmap/h_gswz" />

                    <RelativeLayout style="@style/rlWorkMsg">

                        <TextView
                            android:id="@+id/tv_gswz_num" style="@style/tvWorkMsg"/>
                    </RelativeLayout>
                </RelativeLayout>

                <TextView
                    android:id="@+id/tv_gswz"
                    style="@style/home_tv_org_top_btn_name"
                    android:text="@string/work_gswz" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_gsgl_child"
            android:layout_width="match_parent"
            android:layout_height="78dp"
            android:layout_below="@id/ll_gsgl"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <LinearLayout
                android:id="@+id/ll_hylt"
                style="@style/home_ll_org_top_btn">

                <RelativeLayout
                    android:id="@+id/rl_hylt"
                    style="@style/home_rl_org_top_btn">

                    <ImageView
                        android:id="@+id/iv_hylt"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY"
                        android:src="@mipmap/h_hylt" />

                    <RelativeLayout style="@style/rlWorkMsg">

                        <TextView
                            android:id="@+id/tv_hylt_num" style="@style/tvWorkMsg"/>
                    </RelativeLayout>
                </RelativeLayout>

                <TextView
                    android:id="@+id/tv_hylt"
                    style="@style/home_tv_org_top_btn_name"
                    android:text="@string/work_hylt" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_yjhb"
                style="@style/home_ll_org_top_btn">

                <RelativeLayout
                    android:id="@+id/rl_yjhb"
                    style="@style/home_rl_org_top_btn">

                    <ImageView
                        android:id="@+id/iv_yjhb"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY"
                        android:src="@mipmap/h_yjhb" />

                    <RelativeLayout
                        android:id="@+id/rl_yjhb_num"
                        style="@style/rlWorkMsg">

                        <TextView
                            android:id="@+id/tv_yjhb_num"
                            style="@style/tvWorkMsg"/>
                    </RelativeLayout>
                </RelativeLayout>

                <TextView
                    android:id="@+id/tv_yjhb"
                    style="@style/home_tv_org_top_btn_name"
                    android:text="@string/work_yjhb" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_xjxc"
                style="@style/home_ll_org_top_btn">

                <RelativeLayout
                    android:id="@+id/rl_xjxc"
                    style="@style/home_rl_org_top_btn">

                    <ImageView
                        android:id="@+id/iv_xjxc"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY"
                        android:src="@mipmap/h_xjxc" />

                    <RelativeLayout
                        android:id="@+id/rl_xjxc_num"
                        style="@style/rlWorkMsg">

                        <TextView
                            android:id="@+id/tv_xjxc_num"
                            style="@style/tvWorkMsg"/>
                    </RelativeLayout>
                </RelativeLayout>

                <TextView
                    android:id="@+id/tv_xjxc"
                    style="@style/home_tv_org_top_btn_name"
                    android:text="@string/work_xjxc" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_ghsq"
                style="@style/home_ll_org_top_btn">

                <RelativeLayout
                    android:id="@+id/rl_ghsq"
                    style="@style/home_rl_org_top_btn">

                    <ImageView
                        android:id="@+id/iv_ghsq"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY"
                        android:src="@mipmap/h_xjxc"  />


                    <RelativeLayout
                        android:id="@+id/rl_ghsq_num"
                        style="@style/rlWorkMsg">

                        <TextView
                            android:id="@+id/tv_ghsq_num"
                            style="@style/tvWorkMsg"/>
                    </RelativeLayout>
                </RelativeLayout>

                <TextView
                    android:id="@+id/tv_ghsq"
                    style="@style/home_tv_org_top_btn_name"
                    android:text="工会诉求" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_txl"
                style="@style/home_ll_org_top_btn">

                <RelativeLayout
                    android:id="@+id/rl_txl"
                    style="@style/home_rl_org_top_btn">

                    <ImageView
                        android:id="@+id/iv_txl"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY"
                        android:src="@mipmap/h_txl" />

                    <RelativeLayout style="@style/rlWorkMsg">

                        <TextView
                            android:id="@+id/tv_txl_num" style="@style/tvWorkMsg"/>
                    </RelativeLayout>
                </RelativeLayout>

                <TextView
                    android:id="@+id/tv_txl"
                    style="@style/home_tv_org_top_btn_name"
                    android:text="@string/work_txl" />

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>